StereoKitC/stereokit.h

typedef int32_t bool32_t;
typedef enum log_ {
	log_none                      = 0,
	log_diagnostic,
	log_inform,
	log_warning,
	log_error
} log_;
typedef enum asset_state_ {
	asset_state_error_unsupported = -3,
	asset_state_error_not_found   = -2,
	asset_state_error             = -1,
	asset_state_none              =  0,
	asset_state_loading,
	asset_state_loaded_meta,
	asset_state_loaded,
} asset_state_;
SK_API bool32_t      sk_step               (void (*app_update)(void));
SK_API void          sk_run                (void (*app_update)(void), void (*app_shutdown)(void) sk_default(nullptr));
SK_API void          sk_run_data           (void (*app_update)(void *update_data), void *update_data, void (*app_shutdown)(void *shutdown_data), void *shutdown_data);
typedef struct vec3 {
	float x;
	float y;
	float z;
} vec3;
typedef struct color32 {
	uint8_t r;
	uint8_t g;
	uint8_t b;
	uint8_t a;
} color32;
typedef struct color128 {
	float r;
	float g;
	float b;
	float a;
} color128;
typedef struct spherical_harmonics_t {
	vec3     coefficients[9];
} spherical_harmonics_t;
typedef enum tex_type_ {
	tex_type_image_nomips  = 1 << 0,
	tex_type_cubemap       = 1 << 1,
	tex_type_rendertarget  = 1 << 2,
	tex_type_depth         = 1 << 3,
	tex_type_mips          = 1 << 4,
	tex_type_dynamic       = 1 << 5,
	tex_type_image         = tex_type_image_nomips | tex_type_mips,
} tex_type_;
typedef enum tex_format_ {
	tex_format_none = 0,
	tex_format_rgba32 = 1,
	tex_format_rgba32_linear = 2,
	tex_format_bgra32 = 3,
	tex_format_bgra32_linear = 4,
	tex_format_rg11b10 = 5,
	tex_format_rgb10a2 = 6,
	tex_format_rgba64 = 7, 
	tex_format_rgba64s = 8,
	tex_format_rgba64f = 9,
	tex_format_rgba128 = 10,
	tex_format_r8 = 11,
	tex_format_r16 = 12,
	tex_format_r32 = 13,
	tex_format_depthstencil = 14,
	tex_format_depth32 = 15,
	tex_format_depth16 = 16,
	tex_format_rgba64u = tex_format_rgba64,
} tex_format_;
typedef enum tex_sample_ {
	tex_sample_linear = 0,
	tex_sample_point,
	tex_sample_anisotropic
} tex_sample_;
typedef enum tex_address_ {
	tex_address_wrap = 0,
	tex_address_clamp,
	tex_address_mirror,
} tex_address_;
SK_API tex_t        tex_find                (const char *id);
SK_API tex_t        tex_create              (tex_type_ type sk_default(tex_type_image), tex_format_ format sk_default(tex_format_rgba32));
SK_API tex_t        tex_create_color32      (color32  *in_arr_data, int32_t width, int32_t height, bool32_t srgb_data sk_default(true));
SK_API tex_t        tex_create_color128     (color128 *in_arr_data, int32_t width, int32_t height, bool32_t srgb_data sk_default(true));
SK_API tex_t        tex_create_mem          (void *data, size_t data_size,                  bool32_t srgb_data sk_default(true), int32_t priority sk_default(10));
SK_API tex_t        tex_create_file         (const char *file_utf8,                         bool32_t srgb_data sk_default(true), int32_t priority sk_default(10));
SK_API tex_t        tex_create_file_arr     (const char **in_arr_files, int32_t file_count, bool32_t srgb_data sk_default(true), int32_t priority sk_default(10));
SK_API tex_t        tex_create_cubemap_file (const char *equirectangular_file_utf8,         bool32_t srgb_data sk_default(true), spherical_harmonics_t *out_sh_lighting_info sk_default(nullptr), int32_t priority sk_default(10));
SK_API tex_t        tex_create_cubemap_files(const char **in_arr_cube_face_file_xxyyzz,     bool32_t srgb_data sk_default(true), spherical_harmonics_t *out_sh_lighting_info sk_default(nullptr), int32_t priority sk_default(10));
SK_API void         tex_set_id              (tex_t texture, const char *id);
SK_API const char*  tex_get_id              (const tex_t texture);
SK_API void         tex_set_fallback        (tex_t texture, tex_t fallback);
SK_API void         tex_set_surface         (tex_t texture, void *native_surface, tex_type_ type, int64_t native_fmt, int32_t width, int32_t height, int32_t surface_count, bool32_t owned sk_default(true));
SK_API void*        tex_get_surface         (tex_t texture);
SK_API void         tex_addref              (tex_t texture);
SK_API void         tex_release             (tex_t texture);
SK_API asset_state_ tex_asset_state         (const tex_t texture);
SK_API void         tex_on_load             (tex_t texture, void (*asset_on_load_callback)(tex_t texture, void *context), void *context);
SK_API void         tex_on_load_remove      (tex_t texture, void (*asset_on_load_callback)(tex_t texture, void *context));
SK_API void         tex_set_colors          (tex_t texture, int32_t width, int32_t height, void *data);
SK_API void         tex_set_color_arr       (tex_t texture, int32_t width, int32_t height, void** data, int32_t data_count, spherical_harmonics_t *out_sh_lighting_info sk_default(nullptr), int32_t multisample sk_default(1));
SK_API tex_t        tex_add_zbuffer         (tex_t texture, tex_format_ format sk_default(tex_format_depthstencil));
SK_API void         tex_get_data            (tex_t texture, void *out_data, size_t out_data_size);
SK_API void         tex_get_data_mip        (tex_t texture, void *out_data, size_t out_data_size, int32_t mip_level);
SK_API tex_t        tex_gen_color           (color128 color, int32_t width, int32_t height, tex_type_ type sk_default(tex_type_image), tex_format_ format sk_default(tex_format_rgba32));
SK_API tex_t        tex_gen_particle        (int32_t width, int32_t height, float roundness sk_default(1), gradient_t gradient_linear sk_default(nullptr));
SK_API tex_t        tex_gen_cubemap         (const gradient_t gradient, vec3 gradient_dir, int32_t resolution, spherical_harmonics_t *out_sh_lighting_info sk_default(nullptr));
SK_API tex_t        tex_gen_cubemap_sh      (const sk_ref(spherical_harmonics_t) lookup, int32_t face_size, float light_spot_size_pct sk_default(0), float light_spot_intensity sk_default(6));
SK_API tex_format_  tex_get_format          (tex_t texture);
SK_API int32_t      tex_get_width           (tex_t texture);
SK_API int32_t      tex_get_height          (tex_t texture);
SK_API void         tex_set_sample          (tex_t texture, tex_sample_ sample sk_default(tex_sample_linear));
SK_API tex_sample_  tex_get_sample          (tex_t texture);
SK_API void         tex_set_address         (tex_t texture, tex_address_ address_mode sk_default(tex_address_wrap));
SK_API tex_address_ tex_get_address         (tex_t texture);
SK_API void         tex_set_anisotropy      (tex_t texture, int32_t anisotropy_level sk_default(4));
SK_API int32_t      tex_get_anisotropy      (tex_t texture);
SK_API int32_t      tex_get_mips            (tex_t texture);
SK_API void         tex_set_loading_fallback(tex_t loading_texture);
SK_API void         tex_set_error_fallback  (tex_t error_texture);
SK_API spherical_harmonics_t tex_get_cubemap_lighting(tex_t cubemap_texture);
SK_API font_t       font_find               (const char *id);
SK_API font_t       font_create             (const char *file_utf8);
SK_API font_t       font_create_files       (const char **in_arr_files, int32_t file_count);
SK_API void         font_set_id             (font_t font, const char* id);
SK_API const char*  font_get_id             (const font_t font);
SK_API void         font_addref             (font_t font);
SK_API void         font_release            (font_t font);
SK_API tex_t        font_get_tex            (font_t font);
SK_API shader_t     shader_find             (const char *id);
SK_API shader_t     shader_create_file      (const char *filename_utf8);
SK_API shader_t     shader_create_mem       (void *data, size_t data_size);
SK_API void         shader_set_id           (shader_t shader, const char *id);
SK_API const char*  shader_get_id           (const shader_t shader);
SK_API const char*  shader_get_name         (shader_t shader);
SK_API void         shader_addref           (shader_t shader);
SK_API void         shader_release          (shader_t shader);
SK_API sound_t      sound_generate       (float (*audio_generator)(float sample_time), float duration);
typedef struct file_filter_t {
	char ext[32];
} file_filter_t;
typedef enum picker_mode_ {
	picker_mode_open,
	picker_mode_save,
} picker_mode_;
SK_API void     platform_file_picker        (picker_mode_ mode, void *callback_data, void (*picker_callback)(void *callback_data, bool32_t confirmed, const char *filename), const file_filter_t *filters, int32_t filter_count);
SK_API void     platform_file_picker_sz     (picker_mode_ mode, void *callback_data, void (*picker_callback_sz)(void *callback_data, bool32_t confirmed, const char *filename_ptr, int32_t filename_length), const file_filter_t *in_arr_filters, int32_t filter_count);
typedef enum input_source_ {
	input_source_any           = 0x7FFFFFFF,
	input_source_hand          = 1 << 0,
	input_source_hand_left     = 1 << 1,
	input_source_hand_right    = 1 << 2,
	input_source_gaze          = 1 << 4,
	input_source_gaze_head     = 1 << 5,
	input_source_gaze_eyes     = 1 << 6,
	input_source_gaze_cursor   = 1 << 7,
	input_source_can_press     = 1 << 8,
} input_source_;
typedef enum button_state_ {
	button_state_inactive      = 0,
	button_state_active        = 1 << 0,
	button_state_just_inactive = 1 << 1,
	button_state_just_active   = 1 << 2,
	button_state_changed       = button_state_just_inactive | button_state_just_active,
	button_state_any           = 0x7FFFFFFF,
} button_state_;
typedef struct pointer_t {
	input_source_ source;
	button_state_ tracked;
	button_state_ state;
	ray_t         ray;
	quat          orientation;
} pointer_t;
SK_API void                  input_subscribe      (input_source_ source, button_state_ input_event, void (*input_event_callback)(input_source_ source, button_state_ input_event, const sk_ref(pointer_t) in_pointer));
SK_API void                  input_unsubscribe    (input_source_ source, button_state_ input_event, void (*input_event_callback)(input_source_ source, button_state_ input_event, const sk_ref(pointer_t) in_pointer));
SK_API void              backend_openxr_add_callback_pre_session_create(void (*xr_pre_session_create_callback)(void* context), void* context);
SK_API void              backend_openxr_add_callback_poll_event        (void (*xr_poll_event_callback)(void* context, void* XrEventDataBuffer), void* context);
SK_API void              backend_openxr_remove_callback_poll_event     (void (*xr_poll_event_callback)(void* context, void* XrEventDataBuffer));
SK_API void log_subscribe  (void (*log_callback)(log_ level, const char *text));
SK_API void log_unsubscribe(void (*log_callback)(log_ level, const char *text));