StereoKit/Native/NativeAPI.cs


		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              tex_find            (string id);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              tex_create          (TexType type, TexFormat format);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              tex_create_color32  ([In] Color32[] in_arr_data, int width, int height, int srgb_data);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              tex_create_color128 ([In] Color[] in_arr_data, int width, int height, int srgb_data);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              tex_create_mem      (byte[] data, UIntPtr data_size, int srgb_data, int priority);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              tex_create_file     ([In] byte[] file_utf8, int srgb_data, int priority);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              tex_create_file_arr ([In] string[] in_arr_files, int file_count, int srgb_data, int priority);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              tex_create_cubemap_file([In] byte[] equirectangular_file_utf8, int srgb_data, out SphericalHarmonics out_sh_lighting_info, int priority);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              tex_create_cubemap_files([In] string[] in_arr_cube_face_file_xxyyzz, int srgb_data, out SphericalHarmonics out_sh_lighting_info, int priority);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                tex_set_id          (IntPtr texture, string id);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              tex_get_id          (IntPtr texture);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                tex_set_fallback    (IntPtr texture, IntPtr fallback);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                tex_set_surface     (IntPtr texture, IntPtr native_surface, TexType type, long native_fmt, int width, int height, int surface_count, int owned);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              tex_get_surface     (IntPtr texture);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                tex_addref          (IntPtr texture);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                tex_release         (IntPtr texture);
		[DllImport(dll, CallingConvention = call                 )] public static extern AssetState          tex_asset_state     (IntPtr texture);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                tex_on_load         (IntPtr texture, [MarshalAs(UnmanagedType.FunctionPtr)] AssetOnLoadCallback asset_on_load_callback, IntPtr context);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                tex_on_load_remove  (IntPtr texture, [MarshalAs(UnmanagedType.FunctionPtr)] AssetOnLoadCallback asset_on_load_callback);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                tex_set_colors      (IntPtr texture, int width, int height, byte[] data);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                tex_set_color_arr   (IntPtr texture, int width, int height, byte[] data, int data_count, out SphericalHarmonics out_sh_lighting_info, int multisample);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              tex_add_zbuffer     (IntPtr texture, TexFormat format);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                tex_get_data        (IntPtr texture, out IntPtr out_data, out UIntPtr out_data_size);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                tex_get_data_mip    (IntPtr texture, out IntPtr out_data, out UIntPtr out_data_size, int mip_level);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              tex_gen_color       (Color color, int width, int height, TexType type, TexFormat format);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              tex_gen_particle    (int width, int height, float roundness, IntPtr gradient_linear);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              tex_gen_cubemap     (IntPtr gradient, Vec3 gradient_dir, int resolution, out SphericalHarmonics out_sh_lighting_info);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              tex_gen_cubemap_sh  (in SphericalHarmonics lookup, int face_size, float light_spot_size_pct, float light_spot_intensity);
		[DllImport(dll, CallingConvention = call                 )] public static extern TexFormat           tex_get_format      (IntPtr texture);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 tex_get_width       (IntPtr texture);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 tex_get_height      (IntPtr texture);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                tex_set_sample      (IntPtr texture, TexSample sample);
		[DllImport(dll, CallingConvention = call                 )] public static extern TexSample           tex_get_sample      (IntPtr texture);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                tex_set_address     (IntPtr texture, TexAddress address_mode);
		[DllImport(dll, CallingConvention = call                 )] public static extern TexAddress          tex_get_address     (IntPtr texture);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                tex_set_anisotropy  (IntPtr texture, int anisotropy_level);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 tex_get_anisotropy  (IntPtr texture);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 tex_get_mips        (IntPtr texture);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                tex_set_loading_fallback(IntPtr loading_texture);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                tex_set_error_fallback(IntPtr error_texture);
		[DllImport(dll, CallingConvention = call                 )] public static extern SphericalHarmonics  tex_get_cubemap_lighting(IntPtr cubemap_texture);

		///////////////////////////////////////////

		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              font_find           (string id);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              font_create         ([In] byte[] file_utf8);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              font_create_files   ([In] string[] in_arr_files, int file_count);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                font_set_id         (IntPtr font, string id);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              font_get_id         (IntPtr font);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                font_addref         (IntPtr font);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                font_release        (IntPtr font);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              font_get_tex        (IntPtr font);

		///////////////////////////////////////////

		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              shader_find         (string id);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              shader_create_file  ([In] byte[] filename_utf8);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              shader_create_mem   (byte[] data, UIntPtr data_size);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                shader_set_id       (IntPtr shader, string id);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              shader_get_id       (IntPtr shader);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              shader_get_name     (IntPtr shader);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                shader_addref       (IntPtr shader);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                shader_release      (IntPtr shader);

		///////////////////////////////////////////
